[gd_scene load_steps=23 format=3 uid="uid://crhl7nmua17qi"]

[ext_resource type="PackedScene" uid="uid://bu0roj477cb2l" path="res://scenes/game_field.tscn" id="1_bk45l"]
[ext_resource type="Script" path="res://scenes/game_board.gd" id="1_k5aaq"]
[ext_resource type="Texture2D" uid="uid://bkqpqsxqvgam8" path="res://sprites/bg/stars_blue.jpg" id="2_u5cu7"]
[ext_resource type="PackedScene" uid="uid://dj6tetacep1ij" path="res://scenes/game_hand.tscn" id="3_t4rtj"]
[ext_resource type="Script" path="res://scenes/mouse.gd" id="4_u1qqp"]
[ext_resource type="PackedScene" uid="uid://bqt532l8n2w8u" path="res://objects/card_details.tscn" id="5_1q0hl"]
[ext_resource type="FontFile" uid="uid://ng1y54e8x08v" path="res://fonts/Roboto/Roboto-Bold.ttf" id="5_2t2yb"]
[ext_resource type="PackedScene" uid="uid://dosulntiwpmvw" path="res://objects/card_display.tscn" id="6_akm2x"]
[ext_resource type="FontFile" uid="uid://do6lscs8csbaq" path="res://fonts/Roboto/Roboto-Regular.ttf" id="6_ldbpm"]
[ext_resource type="Theme" uid="uid://cts0fwcuwbvl0" path="res://theme_default.tres" id="7_c566m"]
[ext_resource type="Script" path="res://scenes/hint_node.gd" id="11_jdhxf"]

[sub_resource type="LabelSettings" id="LabelSettings_hwvem"]
font_size = 40
outline_size = 12
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_ykue7"]
font_size = 24
outline_size = 12
outline_color = Color(0, 0, 0, 1)

[sub_resource type="FontVariation" id="FontVariation_da6p1"]
base_font = ExtResource("5_2t2yb")

[sub_resource type="LabelSettings" id="LabelSettings_jwadh"]
font_size = 80
outline_size = 12
outline_color = Color(0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_3p8x8"]
resource_name = "NextPhase"
length = 0.75
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TransitionPanel:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.75),
"transitions": PackedFloat32Array(0.353554, 1, 2),
"update": 0,
"values": [Vector2(1, 0), Vector2(1, 1), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TransitionTurn:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.15, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 0.329877, 1, 1),
"update": 0,
"values": [Vector2(2000, -54), Vector2(2000, -54), Vector2(156, -54), Vector2(156, -54)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("TransitionTurn:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.75),
"transitions": PackedFloat32Array(1, 2),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("TransitionPanel:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.75),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("TransitionTurn:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.75),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}

[sub_resource type="Animation" id="Animation_ptuhn"]
resource_name = "NextPhase2"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TransitionPanel:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(2, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TransitionTurn:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(156, -54), Vector2(156, -54)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("TransitionTurn:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(2, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("TransitionPanel:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("TransitionTurn:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_8v1f7"]
resource_name = "NextTurn"
length = 1.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TransitionPanel:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 1.35, 1.6),
"transitions": PackedFloat32Array(0.353554, 1, 2, 0.353554),
"update": 0,
"values": [Vector2(1, 0), Vector2(1, 1), Vector2(1, 1), Vector2(1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TransitionTurn:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.15, 0.5, 1.25, 1.6),
"transitions": PackedFloat32Array(1, 0.392292, 1, 1.68179, 1),
"update": 0,
"values": [Vector2(2000, -54), Vector2(2000, -54), Vector2(220, -54), Vector2(124, -54), Vector2(-2000, -54)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("TransitionTurn:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.75),
"transitions": PackedFloat32Array(1, 2),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("TransitionPanel:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.75, 1.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, true, false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("TransitionTurn:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.75, 1.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, true, false]
}

[sub_resource type="Animation" id="Animation_ynllq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TransitionPanel:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TransitionTurn:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-91.3334, -51)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("TransitionTurn:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("TransitionPanel:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("TransitionTurn:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1y5pv"]
_data = {
"NextPhase": SubResource("Animation_3p8x8"),
"NextPhase2": SubResource("Animation_ptuhn"),
"NextTurn": SubResource("Animation_8v1f7"),
"RESET": SubResource("Animation_ynllq")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_0wyg4"]
radius = 5.0

[sub_resource type="LabelSettings" id="LabelSettings_2w4dr"]
font_size = 32

[node name="GameBoard" type="Node2D"]
script = ExtResource("1_k5aaq")

[node name="Background" type="Sprite2D" parent="."]
z_index = -100
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_u5cu7")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="FieldPlayer" parent="." instance=ExtResource("1_bk45l")]

[node name="FieldEnemy" parent="." instance=ExtResource("1_bk45l")]
rotation = 3.14159

[node name="FieldCards" type="Node2D" parent="."]

[node name="HandPlayer" parent="." instance=ExtResource("3_t4rtj")]
position = Vector2(0, 504)

[node name="HandEnemy" parent="." instance=ExtResource("3_t4rtj")]
position = Vector2(0, -504)
rotation = 3.14159

[node name="Phases" type="Node2D" parent="."]
position = Vector2(-556, 8)

[node name="Phase" type="Label" parent="Phases"]
offset_left = -91.0
offset_top = -51.0
offset_right = 229.0
offset_bottom = 4.0
pivot_offset = Vector2(160, 32)
theme_override_fonts/font = ExtResource("5_2t2yb")
label_settings = SubResource("LabelSettings_hwvem")
horizontal_alignment = 1
clip_text = true

[node name="NextPhase" type="Label" parent="Phases"]
offset_left = -91.0
offset_top = 4.0
offset_right = 229.0
offset_bottom = 38.0
pivot_offset = Vector2(160, 16)
theme_override_fonts/font = ExtResource("6_ldbpm")
label_settings = SubResource("LabelSettings_ykue7")
horizontal_alignment = 1
clip_text = true

[node name="EndPhase" type="Button" parent="Phases"]
offset_left = -243.0
offset_top = -49.0
offset_right = -106.0
offset_bottom = 35.0
theme = ExtResource("7_c566m")
theme_override_fonts/font = SubResource("FontVariation_da6p1")
theme_override_font_sizes/font_size = 32
text = "END
PHASE"

[node name="TransitionPanel" type="Panel" parent="Phases"]
visible = false
offset_left = -440.0
offset_top = -54.0
offset_right = 1560.0
offset_bottom = 38.0
pivot_offset = Vector2(0, 46)

[node name="TransitionTurn" type="Label" parent="Phases"]
visible = false
offset_left = -91.3334
offset_top = -51.0
offset_right = 708.667
offset_bottom = 45.0
pivot_offset = Vector2(400, 48)
theme_override_fonts/font = ExtResource("5_2t2yb")
text = "1P Test Phase"
label_settings = SubResource("LabelSettings_jwadh")
horizontal_alignment = 1

[node name="TransitionPlayer" type="AnimationPlayer" parent="Phases"]
libraries = {
"": SubResource("AnimationLibrary_1y5pv")
}

[node name="Menus" type="Node2D" parent="."]
z_index = 1000

[node name="Mouse" type="Area2D" parent="."]
script = ExtResource("4_u1qqp")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Mouse"]
shape = SubResource("CircleShape2D_0wyg4")

[node name="Panel" type="Panel" parent="Mouse"]
offset_left = -5.0
offset_top = -5.0
offset_right = 5.0
offset_bottom = 5.0
mouse_filter = 2

[node name="CardDetails" parent="." instance=ExtResource("5_1q0hl")]
visible = false
z_index = 30
scale = Vector2(0.75, 0.75)

[node name="QuickDetails" type="Node2D" parent="."]
z_index = 30

[node name="Left" parent="QuickDetails" instance=ExtResource("5_1q0hl")]
visible = false
z_index = 2
position = Vector2(-768, 0)
scale = Vector2(0.4, 0.4)

[node name="Right" parent="QuickDetails" instance=ExtResource("5_1q0hl")]
visible = false
z_index = 2
position = Vector2(768, 0)
scale = Vector2(0.4, 0.4)

[node name="AnonCard" parent="." instance=ExtResource("6_akm2x")]
visible = false
scale = Vector2(0.15, 0.15)
selectable = false

[node name="TestButton" type="Button" parent="."]
visible = false
offset_left = -924.0
offset_top = -461.0
offset_right = -883.0
offset_bottom = -430.0
text = "Test"

[node name="TestLabel" type="Label" parent="."]
offset_left = -935.0
offset_top = -296.0
offset_right = -879.0
offset_bottom = -273.0
text = "Events:"

[node name="ButtonExit" type="Button" parent="."]
offset_left = -942.0
offset_top = -520.0
offset_right = -872.0
offset_bottom = -472.0
theme = ExtResource("7_c566m")
text = "Exit"
metadata/_edit_use_anchors_ = true

[node name="AudioStream1" type="AudioStreamPlayer2D" parent="."]

[node name="AudioStream2" type="AudioStreamPlayer2D" parent="."]

[node name="AudioStream3" type="AudioStreamPlayer2D" parent="."]

[node name="HintNode" type="Node2D" parent="."]
script = ExtResource("11_jdhxf")

[node name="HintContainer" type="PanelContainer" parent="HintNode"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -109.0
offset_top = -24.0
offset_right = 109.0
offset_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(0, 24)
mouse_filter = 2
theme = ExtResource("7_c566m")

[node name="HintText" type="Label" parent="HintNode/HintContainer"]
layout_mode = 2
theme = ExtResource("7_c566m")
text = "THIS IS A HINT"
label_settings = SubResource("LabelSettings_2w4dr")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="zone_selected" from="FieldPlayer" to="." method="_on_zone_selected"]
[connection signal="zone_selected" from="FieldEnemy" to="." method="_on_zone_selected"]
[connection signal="pressed" from="Phases/EndPhase" to="." method="_on_end_phase_pressed"]
[connection signal="pressed" from="TestButton" to="." method="_on_test_button_pressed"]
[connection signal="pressed" from="ButtonExit" to="." method="_on_button_exit_pressed"]
